--- a/index.html
+++ b/index.html
@@ -53,6 +53,36 @@
 
     </main>
 
+        <div id="view-modal" class="fixed inset-0 z-[60] hidden bg-black/95 backdrop-blur-xl flex items-center justify-center p-0 sm:p-4">
+        <div class="w-full h-full sm:h-auto sm:max-w-2xl bg-slate-900 sm:rounded-2xl relative overflow-hidden flex flex-col">
+            
+            <button onclick="closeViewModal()" class="absolute top-4 right-4 z-20 bg-black/50 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-red-600 transition">
+                <i class="fa-solid fa-times text-xl"></i>
+            </button>
+
+            <div class="overflow-y-auto h-full no-scrollbar">
+                <div id="view-media" class="w-full bg-black min-h-[250px] flex items-center justify-center">
+                    </div>
+
+                <div class="p-6 sm:p-8">
+                    <span id="view-category" class="inline-block bg-blue-600 text-xs font-bold px-2 py-1 rounded mb-3 text-white">Category</span>
+                    <h2 id="view-title" class="text-2xl sm:text-3xl font-bold text-white mb-2 leading-tight">Post Title</h2>
+                    <p id="view-date" class="text-gray-400 text-sm mb-6">Date</p>
+                    
+                    <div id="view-content" class="text-gray-300 text-lg leading-relaxed whitespace-pre-wrap font-light">
+                        </div>
+
+                    <div id="view-link-container" class="mt-8 pt-4 border-t border-slate-700 hidden">
+                         <a id="view-link" href="#" target="_blank" class="text-blue-400 hover:text-blue-300 flex items-center gap-2">
+                            <i class="fa-solid fa-link"></i> মূল লিঙ্ক ভিজিট করুন
+                         </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div id="config-modal" class="fixed inset-0 z-[60] hidden bg-black/80 backdrop-blur-sm flex items-center justify-center p-4">
         <div class="glass w-full max-w-sm p-6 rounded-2xl relative">
             <h3 class="text-xl font-bold mb-4 text-white">GitHub কনফিগারেশন</h3>
